# streamlit_template

./: pyproject.toml
docs/: workdir.md
src/: Home.py  __init__.py
src/assets/: styles.css
src/auth/: auth.py
src/components/: Charts.py  RoleForm.py  RoleTable.py  UserForm.py  UserTable.py  __init__.py
src/core/: config.py
src/db/: __init__.py  base_class.py  session.py
src/error/: custom_exception.py
src/models/: role_model.py  user_model.py  user_role_model.py
src/pages/: RoleManagement.py  Settings.py  UserManagement.py
src/schema/: __init__.py  base_schema.py  login_schema.py  role_schema.py  types_annotated.py  user_role_schema.py  user_schema.py
src/services/: ApiClient.py
src/util/: annotated.py  email.py  functions.py  validators.py
